--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body> 
-    <script src ="script.js"></script>
+<body>
+    <div id="btnContainer">
+        <button id="rock" class="btn">Rock</button>
+        <button id="paper" class="btn">Paper</button>
+        <button id="scissors" class="btn">Scissors</button>
+    </div>
+    <div class="textContainer">
+        <div id="display"></div>
+        <div id="score"></div>
+        <div id="result"></div>
+    </div>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
